# dotfiles

./: .gdbinit  .gitconfig  .logout  .profile.shared  .screenrc  .signature  .tmux.conf  .tmux.conf.modern  .vimrc  .xmodmap-dvorak  .xmodmap-qwerty
.config/gtk-3.0/: gtk.css
.emacs.d/: init.el
.emacs.d/autoload/: lsp.el  magit.el  navigation.el  pretty.el
.fluxbox/: keys
foot/: foot.ini
i3/: config
sway/: Makefile  config  focus_path.jq  focus_tab_parent  focus_tab_parent.cc  focus_tab_parent.sh  keyboard.xkb  sway-fnord42.conf  swaylib.cc  swaylib.h  swaytabs.cc
sway/tools/: .gitignore  Makefile.am  configure.ac
sway/tools/src/: focus_tab_parent.cc  next_tab.cc  swaylib.cc  swaylib.h
